# memory_share

./: CMakeLists.txt  README.md
memory_share_common/include/: data_packet.h
memory_share_reader/: main.cpp
memory_share_reader/include/: memory_share_reader.h
memory_share_reader/src/: memory_share_reader.cpp
memory_share_writer/: main.cpp
memory_share_writer/include/: memory_share_writer.h
memory_share_writer/src/: memory_share_writer.cpp
